// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`preferences - navigation to telemetry preferences given URL for Sentry DNS, when navigating to preferences when navigating to telemetry preferences renders 1`] = `
<div>
  <div
    class="Notifications flex column align-flex-end"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="SettingLayout showNavigation Preferences"
      >
        <nav
          class="sidebarRegion"
        >
          <div
            class="sidebar"
          >
            <div
              class="Tabs flex column"
            >
              <div
                data-preference-tab-group-test="general-tab-group"
              >
                <div
                  class="header flex items-center"
                >
                  Preferences
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="app"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    App
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="proxy"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="kubernetes"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Kubernetes
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="editor"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Editor
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="terminal"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-preference-tab-link-test="telemetry"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Telemetry
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="contentRegion"
          id="ScrollSpyRoot"
        >
          <div
            class="content"
          >
            <section
              data-preference-page-test="telemetry-page"
              id="telemetry-page"
            >
              <h2
                data-preference-page-title-test="true"
              >
                Telemetry
              </h2>
              <div
                data-preference-item-test="automatic-error-reporting"
              >
                <div
                  class="small"
                  data-testid="telemetry-preferences-for-automatic-error-reporting"
                  id="sentry"
                >
                  <div
                    class="SubTitle"
                  >
                    Automatic Error Reporting
                     
                  </div>
                  <label
                    class="Checkbox flex align-center checked"
                  >
                    <input
                      checked=""
                      type="checkbox"
                    />
                    <i
                      class="box flex align-center"
                    />
                    <span
                      class="label"
                    >
                      Allow automatic error reporting
                    </span>
                  </label>
                  <div
                    class="hint"
                  >
                    <span>
                      Automatic error reports provide vital information about issues and application crashes. It is highly recommended to keep this feature enabled to ensure fast turnaround for issues you might encounter.
                    </span>
                  </div>
                </div>
              </div>
            </section>
          </div>
          <div
            class="toolsRegion"
          >
            <div
              class="fixed top-[60px]"
            >
              <div
                data-testid="close-preferences"
              >
                <div
                  aria-label="Close"
                  class="closeButton"
                  role="button"
                >
                  <i
                    class="Icon icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                </div>
                <div
                  aria-hidden="true"
                  class="esc"
                >
                  ESC
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex column"
    >
      <div
        class="HotbarItems flex column gaps"
      >
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="0"
        >
          <div
            style="z-index: 12; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="1"
        >
          <div
            style="z-index: 11; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="2"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="3"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="4"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="5"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="6"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="7"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="8"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="9"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="10"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="11"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`preferences - navigation to telemetry preferences given in preferences, when rendered renders 1`] = `
<div>
  <div
    class="Notifications flex column align-flex-end"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="SettingLayout showNavigation Preferences"
      >
        <nav
          class="sidebarRegion"
        >
          <div
            class="sidebar"
          >
            <div
              class="Tabs flex column"
            >
              <div
                data-preference-tab-group-test="general-tab-group"
              >
                <div
                  class="header flex items-center"
                >
                  Preferences
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-preference-tab-link-test="app"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    App
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="proxy"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="kubernetes"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Kubernetes
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="editor"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Editor
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="terminal"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="contentRegion"
          id="ScrollSpyRoot"
        >
          <div
            class="content"
          >
            <section
              data-preference-page-test="application-page"
              id="application-page"
            >
              <h2
                data-preference-page-title-test="true"
              >
                Application
              </h2>
              <div
                data-preference-item-test="theme"
              >
                <section
                  id="appearance"
                >
                  <div
                    class="SubTitle"
                  >
                    Theme
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-theme-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__placeholder css-1jqq78o-placeholder"
                          id="react-select-theme-input-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-theme-input-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="theme-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="extension-install-registry"
              >
                <section
                  id="extensionRegistryUrl"
                >
                  <div
                    class="SubTitle"
                  >
                    Extension Install Registry
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-extension-install-registry-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__single-value css-1dimb5e-singleValue"
                        >
                          Default Url
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="extension-install-registry-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="mt-4 mb-5 leading-relaxed"
                  >
                    This setting is to change the registry URL for installing extensions by name. 
                    If you are unable to access the default registry (https://registry.npmjs.org) you can change it in your 
                    <b>
                      .npmrc
                    </b>
                     file or in the input below.
                  </p>
                  <div
                    class="Input theme round black disabled invalid"
                  >
                    <label
                      class="input-area flex gaps align-center"
                      id=""
                    >
                      <input
                        class="input box grow"
                        disabled=""
                        placeholder="Custom Extension Registry URL..."
                        spellcheck="false"
                        value=""
                      />
                    </label>
                    <div
                      class="input-info flex gaps"
                    />
                  </div>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="start-up"
              >
                <section
                  id="other"
                >
                  <div
                    class="SubTitle"
                  >
                    Start-up
                     
                  </div>
                  <label
                    class="Switch"
                    data-testid="switch"
                  >
                    Automatically start Lens on login
                    <input
                      role="switch"
                      type="checkbox"
                    />
                  </label>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="timezone"
              >
                <section
                  id="locale"
                >
                  <div
                    class="SubTitle"
                  >
                    Locale Timezone
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-timezone-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__single-value css-1dimb5e-singleValue"
                        >
                          Etc/GMT
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="timezone-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
            </section>
          </div>
          <div
            class="toolsRegion"
          >
            <div
              class="fixed top-[60px]"
            >
              <div
                data-testid="close-preferences"
              >
                <div
                  aria-label="Close"
                  class="closeButton"
                  role="button"
                >
                  <i
                    class="Icon icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                </div>
                <div
                  aria-hidden="true"
                  class="esc"
                >
                  ESC
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex column"
    >
      <div
        class="HotbarItems flex column gaps"
      >
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="0"
        >
          <div
            style="z-index: 12; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="1"
        >
          <div
            style="z-index: 11; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="2"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="3"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="4"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="5"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="6"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="7"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="8"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="9"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="10"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="11"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`preferences - navigation to telemetry preferences given in preferences, when rendered when extension with telemetry preference items gets enabled renders 1`] = `
<div>
  <div
    class="Notifications flex column align-flex-end"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="SettingLayout showNavigation Preferences"
      >
        <nav
          class="sidebarRegion"
        >
          <div
            class="sidebar"
          >
            <div
              class="Tabs flex column"
            >
              <div
                data-preference-tab-group-test="general-tab-group"
              >
                <div
                  class="header flex items-center"
                >
                  Preferences
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-preference-tab-link-test="app"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    App
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="proxy"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="kubernetes"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Kubernetes
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="editor"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Editor
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="terminal"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="telemetry"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Telemetry
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="contentRegion"
          id="ScrollSpyRoot"
        >
          <div
            class="content"
          >
            <section
              data-preference-page-test="application-page"
              id="application-page"
            >
              <h2
                data-preference-page-title-test="true"
              >
                Application
              </h2>
              <div
                data-preference-item-test="theme"
              >
                <section
                  id="appearance"
                >
                  <div
                    class="SubTitle"
                  >
                    Theme
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-theme-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__placeholder css-1jqq78o-placeholder"
                          id="react-select-theme-input-placeholder"
                        >
                          Select...
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-describedby="react-select-theme-input-placeholder"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="theme-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="extension-install-registry"
              >
                <section
                  id="extensionRegistryUrl"
                >
                  <div
                    class="SubTitle"
                  >
                    Extension Install Registry
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-extension-install-registry-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__single-value css-1dimb5e-singleValue"
                        >
                          Default Url
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="extension-install-registry-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                  <p
                    class="mt-4 mb-5 leading-relaxed"
                  >
                    This setting is to change the registry URL for installing extensions by name. 
                    If you are unable to access the default registry (https://registry.npmjs.org) you can change it in your 
                    <b>
                      .npmrc
                    </b>
                     file or in the input below.
                  </p>
                  <div
                    class="Input theme round black disabled invalid"
                  >
                    <label
                      class="input-area flex gaps align-center"
                      id=""
                    >
                      <input
                        class="input box grow"
                        disabled=""
                        placeholder="Custom Extension Registry URL..."
                        spellcheck="false"
                        value=""
                      />
                    </label>
                    <div
                      class="input-info flex gaps"
                    />
                  </div>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="start-up"
              >
                <section
                  id="other"
                >
                  <div
                    class="SubTitle"
                  >
                    Start-up
                     
                  </div>
                  <label
                    class="Switch"
                    data-testid="switch"
                  >
                    Automatically start Lens on login
                    <input
                      role="switch"
                      type="checkbox"
                    />
                  </label>
                </section>
              </div>
              <div
                class="HorizontalLine size-xl"
              />
              <div
                data-preference-item-test="timezone"
              >
                <section
                  id="locale"
                >
                  <div
                    class="SubTitle"
                  >
                    Locale Timezone
                     
                  </div>
                  <div
                    class="Select theme-lens css-b62m3t-container"
                  >
                    <span
                      class="css-1f43avz-a11yText-A11yText"
                      id="react-select-timezone-input-live-region"
                    />
                    <span
                      aria-atomic="false"
                      aria-live="polite"
                      aria-relevant="additions text"
                      class="css-1f43avz-a11yText-A11yText"
                    />
                    <div
                      class="Select__control css-13cymwt-control"
                    >
                      <div
                        class="Select__value-container Select__value-container--has-value css-1fdsijx-ValueContainer"
                      >
                        <div
                          class="Select__single-value css-1dimb5e-singleValue"
                        >
                          Etc/GMT
                        </div>
                        <div
                          class="Select__input-container css-qbdosj-Input"
                          data-value=""
                        >
                          <input
                            aria-autocomplete="list"
                            aria-expanded="false"
                            aria-haspopup="true"
                            autocapitalize="none"
                            autocomplete="off"
                            autocorrect="off"
                            class="Select__input"
                            id="timezone-input"
                            role="combobox"
                            spellcheck="false"
                            style="opacity: 1; width: 100%; grid-area: 1 / 2; min-width: 2px; border: 0px; margin: 0px; outline: 0; padding: 0px;"
                            tabindex="0"
                            type="text"
                            value=""
                          />
                        </div>
                      </div>
                      <div
                        class="Select__indicators css-1hb7zxy-IndicatorsContainer"
                      >
                        <span
                          class="Select__indicator-separator css-1u9des2-indicatorSeparator"
                        />
                        <div
                          aria-hidden="true"
                          class="Select__indicator Select__dropdown-indicator css-1xc3v61-indicatorContainer"
                        >
                          <svg
                            aria-hidden="true"
                            class="css-tj5bde-Svg"
                            focusable="false"
                            height="20"
                            viewBox="0 0 20 20"
                            width="20"
                          >
                            <path
                              d="M4.516 7.548c0.436-0.446 1.043-0.481 1.576 0l3.908 3.747 3.908-3.747c0.533-0.481 1.141-0.446 1.574 0 0.436 0.445 0.408 1.197 0 1.615-0.406 0.418-4.695 4.502-4.695 4.502-0.217 0.223-0.502 0.335-0.787 0.335s-0.57-0.112-0.789-0.335c0 0-4.287-4.084-4.695-4.502s-0.436-1.17 0-1.615z"
                            />
                          </svg>
                        </div>
                      </div>
                    </div>
                  </div>
                </section>
              </div>
            </section>
          </div>
          <div
            class="toolsRegion"
          >
            <div
              class="fixed top-[60px]"
            >
              <div
                data-testid="close-preferences"
              >
                <div
                  aria-label="Close"
                  class="closeButton"
                  role="button"
                >
                  <i
                    class="Icon icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                </div>
                <div
                  aria-hidden="true"
                  class="esc"
                >
                  ESC
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex column"
    >
      <div
        class="HotbarItems flex column gaps"
      >
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="0"
        >
          <div
            style="z-index: 12; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="1"
        >
          <div
            style="z-index: 11; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="2"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="3"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="4"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="5"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="6"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="7"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="8"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="9"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="10"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="11"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`preferences - navigation to telemetry preferences given in preferences, when rendered when extension with telemetry preference items gets enabled when clicking link to telemetry preferences from navigation renders 1`] = `
<div>
  <div
    class="Notifications flex column align-flex-end"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="SettingLayout showNavigation Preferences"
      >
        <nav
          class="sidebarRegion"
        >
          <div
            class="sidebar"
          >
            <div
              class="Tabs flex column"
            >
              <div
                data-preference-tab-group-test="general-tab-group"
              >
                <div
                  class="header flex items-center"
                >
                  Preferences
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="app"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    App
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="proxy"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="kubernetes"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Kubernetes
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="editor"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Editor
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="terminal"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center active"
                  data-preference-tab-link-test="telemetry"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Telemetry
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="contentRegion"
          id="ScrollSpyRoot"
        >
          <div
            class="content"
          >
            <section
              data-preference-page-test="telemetry-page"
              id="telemetry-page"
            >
              <h2
                data-preference-page-title-test="true"
              >
                Telemetry
              </h2>
              <div
                data-preference-item-test="preference-item-for-extension-some-test-extension-name-item-some-telemetry-preference-item-id"
              >
                <section
                  class="small"
                  id="some-telemetry-preference-item-id"
                >
                  <div
                    class="SubTitle"
                  >
                    Some telemetry-preference item
                     
                  </div>
                  <div
                    data-testid="some-preference-item-input"
                  />
                  <div
                    class="hint"
                  >
                    <div
                      data-testid="some-preference-item-hint"
                    />
                  </div>
                </section>
                <hr
                  class="small"
                />
              </div>
            </section>
          </div>
          <div
            class="toolsRegion"
          >
            <div
              class="fixed top-[60px]"
            >
              <div
                data-testid="close-preferences"
              >
                <div
                  aria-label="Close"
                  class="closeButton"
                  role="button"
                >
                  <i
                    class="Icon icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                </div>
                <div
                  aria-hidden="true"
                  class="esc"
                >
                  ESC
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex column"
    >
      <div
        class="HotbarItems flex column gaps"
      >
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="0"
        >
          <div
            style="z-index: 12; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="1"
        >
          <div
            style="z-index: 11; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="2"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="3"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="4"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="5"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="6"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="7"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="8"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="9"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="10"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="11"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;

exports[`preferences - navigation to telemetry preferences given no URL for Sentry DNS, when navigating to telemetry preferences renders 1`] = `
<div>
  <div
    class="Notifications flex column align-flex-end"
  />
  <div
    class="ClusterManager"
  >
    <div
      class="topBar"
    >
      <div
        class="items"
      >
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive focusable"
            data-testid="home-button"
            tabindex="0"
          >
            <span
              class="icon"
              data-icon-name="home"
            >
              home
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-back"
          >
            <span
              class="icon"
              data-icon-name="arrow_back"
            >
              arrow_back
            </span>
          </i>
        </div>
        <div
          class="size-sm"
        />
        <div
          class="preventedDragging"
        >
          <i
            class="Icon material interactive disabled focusable"
            data-testid="history-forward"
          >
            <span
              class="icon"
              data-icon-name="arrow_forward"
            >
              arrow_forward
            </span>
          </i>
        </div>
        <div
          class="separator"
        />
      </div>
    </div>
    <main>
      <div
        id="lens-views"
      />
      <div
        class="SettingLayout showNavigation Preferences"
      >
        <nav
          class="sidebarRegion"
        >
          <div
            class="sidebar"
          >
            <div
              class="Tabs flex column"
            >
              <div
                data-preference-tab-group-test="general-tab-group"
              >
                <div
                  class="header flex items-center"
                >
                  Preferences
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="app"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    App
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="proxy"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Proxy
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="kubernetes"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Kubernetes
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="editor"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Editor
                  </div>
                </div>
                <div
                  class="Tab flex gaps align-center"
                  data-preference-tab-link-test="terminal"
                  role="tab"
                  tabindex="0"
                >
                  <div
                    class="label"
                  >
                    Terminal
                  </div>
                </div>
              </div>
            </div>
          </div>
        </nav>
        <div
          class="contentRegion"
          id="ScrollSpyRoot"
        >
          <div
            class="content"
          >
            <section
              data-preference-page-test="telemetry-page"
              id="telemetry-page"
            >
              <h2
                data-preference-page-title-test="true"
              >
                Telemetry
              </h2>
            </section>
          </div>
          <div
            class="toolsRegion"
          >
            <div
              class="fixed top-[60px]"
            >
              <div
                data-testid="close-preferences"
              >
                <div
                  aria-label="Close"
                  class="closeButton"
                  role="button"
                >
                  <i
                    class="Icon icon material focusable"
                  >
                    <span
                      class="icon"
                      data-icon-name="close"
                    >
                      close
                    </span>
                  </i>
                </div>
                <div
                  aria-hidden="true"
                  class="esc"
                >
                  ESC
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </main>
    <div
      class="HotbarMenu flex column"
    >
      <div
        class="HotbarItems flex column gaps"
      >
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="0"
        >
          <div
            style="z-index: 12; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-welcome-page-entity"
                style="width: 40px; height: 40px; background: rgb(210, 16, 232);"
              >
                WP
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="1"
        >
          <div
            style="z-index: 11; position: absolute;"
          >
            <div
              class="HotbarIcon contextMenuAvailable"
            >
              <div
                class="Avatar rounded disabled avatar"
                id="hotbarIcon-hotbar-icon-catalog-entity"
                style="width: 40px; height: 40px; background: rgb(5, 1, 130);"
              >
                Ca
              </div>
            </div>
          </div>
        </div>
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="2"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="3"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="4"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="5"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="6"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="7"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="8"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="9"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="10"
        />
        <div
          class="HotbarCell isDraggingOwner animateDown"
          index="11"
        />
      </div>
      <div
        class="HotbarSelector"
      >
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_left"
          >
            arrow_left
          </span>
        </i>
        <div
          class="HotbarIndex"
        >
          <div
            class="badge Badge small clickable"
            data-testid="hotbar-menu-badge-for-default"
            id="hotbarIndex"
          >
            1
          </div>
        </div>
        <i
          class="Icon material interactive focusable"
          tabindex="0"
        >
          <span
            class="icon"
            data-icon-name="arrow_right"
          >
            arrow_right
          </span>
        </i>
      </div>
    </div>
    <div
      class="StatusBar"
      data-testid="status-bar"
    >
      <div
        class="leftSide"
        data-testid="status-bar-left"
      />
      <div
        class="rightSide"
        data-testid="status-bar-right"
      />
    </div>
  </div>
</div>
`;
